feat: Implement onboarding feature with cubit state management
- Added onboarding images resource class.
- Created OnboardingCubit for managing onboarding index state.
- Developed OnboardingScreen with page view and skip functionality.
- Introduced CustomJourneyDot widget for visual indicators.
- Implemented OnBoardingText widget to display dynamic onboarding titles.
- Added SkipButton for navigating directly to the main layout.
- Created SplashView to handle initial app loading and redirection.
- Established MainLayout with tab navigation and state management using cubit.
- Integrated localization support for dynamic text.

--- a/lib/core/localization/app_ar.arb
+++ b/lib/core/localization/app_ar.arb
@@ -1,3 +1,18 @@
 {
-    "loading": "جارٍ التحميل..."
+    "loading": "جارٍ التحميل...",
+    "lang":"En",
+    "skip":"تخطى",
+    "next":"التالى",
+    "onboard1Title":"مرحبًا بك في تطبيقنا",
+    "onboard1Desc":"اكتشف ميزاتنا الرائعة وسهولة الاستخدام.",
+    "onboard2Title":"ابق على اتصال",
+    "onboard2Desc":"تواصل مع أصدقائك وعائلتك بسهولة.",
+    "onboard3Title":"ابدأ الآن",
+    "onboard3Desc":"قم بالتسجيل وابدأ رحلتك معنا اليوم!",
+    "home":"الرئيسية",
+    "search":"بحث",
+    "notifications":"الإشعارات",
+    "profile":"الملف الشخصي",
+    "services":"الخدمات",
+    "support":"الدعم"
 }
