--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -1,3 +1,18 @@
 {
-    "loading": "Loading..."
+    "loading": "Loading...",
+    "lang":"ع",
+    "skip":"Skip",
+    "next":"Next",
+    "onboard1Title":"Welcome to Our App",
+    "onboard1Desc":"Discover our amazing features and ease of use.",
+    "onboard2Title":"Stay Connected",
+    "onboard2Desc":"Easily connect with your friends and family.",
+    "onboard3Title":"Get Started Now",
+    "onboard3Desc":"Sign up and start your journey with us today!",
+    "home":"Home",
+    "search":"Search",
+    "notifications":"Notifications",
+    "profile":"Profile",
+    "services":"Services",
+    "support":"Support"
 }
